--- a/index.html
+++ b/index.html
@@ -4,14 +4,54 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/svg/tick.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- SEO Basics -->
     <title>Nice Advice</title>
+    <meta
+      name="description"
+      content="Nice Advice – articles and useful tips about health, family, sports, nutrition, and everyday life. Find practical advice for a better lifestyle."
+    />
+    <meta
+      name="keywords"
+      content="health, family, sports, human body, lifestyle, nutrition, tips, guides, advice"
+    />
+
+    <meta name="author" content="Nice Advice" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+    <meta property="og:title" content="Nice Advice" />
+    <meta
+      property="og:description"
+      content="Nice Advice – articles and useful tips about health, family, sports, nutrition, and everyday life. Find practical advice for a better lifestyle."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nice-advice.info/" />
+    <meta property="og:image" content="./src/assets/img/preview.png" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Nice Advice" />
+    <meta
+      name="twitter:description"
+      content="Nice Advice – articles and useful tips about health, family, sports, nutrition, and everyday life. Find practical advice for a better lifestyle."
+    />
+    <meta name="twitter:image" content="./src/assets/img/preview.png" />
+    <meta name="twitter:site" content="@niceadvice" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://nice-advice.info/" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <!-- Google tag (gtag.js) -->
+
+    <!-- Google Analytics -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-9W0Q698989"
@@ -22,7 +62,6 @@
         dataLayer.push(arguments);
       }
       gtag('js', new Date());
-
       gtag('config', 'G-9W0Q698989');
     </script>
   </head>
