--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/svg/tick.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO Basics -->
@@ -15,30 +15,49 @@
       name="keywords"
       content="health, family, sports, human body, lifestyle, nutrition, tips, guides, advice"
     />
-
     <meta name="author" content="Nice Advice" />
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph (Facebook, LinkedIn, etc.) -->
-    <meta property="og:title" content="Nice Advice" />
+    <meta
+      property="og:title"
+      content="Nice Advice – Practical Health, Family, Nutrition & Lifestyle Tips"
+    />
     <meta
       property="og:description"
       content="Nice Advice – articles and useful tips about health, family, sports, nutrition, and everyday life. Find practical advice for a better lifestyle."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://nice-advice.info/" />
-    <meta property="og:image" content="./src/assets/img/preview.png" />
+    <meta
+      property="og:image"
+      content="https://vivid-triumph-4386b82e17.media.strapiapp.com/preview_fe3bc00fab.png"
+    />
     <meta property="og:locale" content="en_US" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Nice Advice" />
+    <meta
+      name="twitter:title"
+      content="Nice Advice – Practical Health, Family, Nutrition & Lifestyle Tips"
+    />
     <meta
       name="twitter:description"
       content="Nice Advice – articles and useful tips about health, family, sports, nutrition, and everyday life. Find practical advice for a better lifestyle."
     />
-    <meta name="twitter:image" content="./src/assets/img/preview.png" />
+    <meta
+      name="twitter:image"
+      content="https://vivid-triumph-4386b82e17.media.strapiapp.com/preview_fe3bc00fab.png"
+    />
     <meta name="twitter:site" content="@niceadvice" />
+
+    <!-- Icons -->
+    <link rel="icon" type="image/svg+xml" href="./src/assets/svg/tick.svg" />
+    <link rel="icon" type="image/png" href="./src/assets/svg/tick.svg" />
+    <link rel="apple-touch-icon" href="./src/assets/svg/tick.svg" />
+    <link rel="mask-icon" href="./src/assets/svg/tick.svg" color="#0ea5e9" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="manifest" href="/site.webmanifest" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://nice-advice.info/" />
@@ -50,6 +69,35 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Nice Advice",
+        "url": "https://nice-advice.info/",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://nice-advice.info/search?q={query}",
+          "query-input": "required name=query"
+        }
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Nice Advice",
+        "url": "https://nice-advice.info/",
+        "logo": "https://vivid-triumph-4386b82e17.media.strapiapp.com/tick_b2fcfe5480.svg",
+        "sameAs": [
+          "https://www.facebook.com/niceadvice",
+          "https://www.linkedin.com/company/niceadvice",
+          "https://twitter.com/niceadvice"
+        ]
+      }
+    </script>
 
     <!-- Google Analytics -->
     <script
