updated seo optimization

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <link rel="apple-touch-icon" href="./src/assets/svg/tick.svg" />
     <link rel="mask-icon" href="./src/assets/svg/tick.svg" color="#0ea5e9" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="/public/site.webmanifest" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://nice-advice.info/" />
