--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO Basics -->
-    <title>Nice Advice</title>
+    <title>HairStylesForSeniors</title>
     <meta
       name="description"
-      content="Nice Advice – articles and useful tips about health, family, sports, nutrition, and everyday life. Find practical advice for a better lifestyle."
+      content="HairStylesForSeniors – articles and useful tips about health, family, sports, nutrition, and everyday life. Find practical advice for a better lifestyle."
     />
     <meta
       name="keywords"
       content="health, family, sports, human body, lifestyle, nutrition, tips, guides, advice"
     />
-    <meta name="author" content="Nice Advice" />
+    <meta name="author" content="HairStylesForSeniors" />
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph (Facebook, LinkedIn, etc.) -->
     <meta
       property="og:title"
-      content="Nice Advice – Practical Health, Family, Nutrition & Lifestyle Tips"
+      content="HairStylesForSeniors – Practical Health, Family, Nutrition & Lifestyle Tips"
     />
     <meta
       property="og:description"
-      content="Nice Advice – articles and useful tips about health, family, sports, nutrition, and everyday life. Find practical advice for a better lifestyle."
+      content="HairStylesForSeniors – articles and useful tips about health, family, sports, nutrition, and everyday life. Find practical advice for a better lifestyle."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://nice-advice.info/" />
@@ -39,11 +39,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Nice Advice – Practical Health, Family, Nutrition & Lifestyle Tips"
+      content="HairStylesForSeniors – Practical Health, Family, Nutrition & Lifestyle Tips"
     />
     <meta
       name="twitter:description"
-      content="Nice Advice – articles and useful tips about health, family, sports, nutrition, and everyday life. Find practical advice for a better lifestyle."
+      content="HairStylesForSeniors – articles and useful tips about health, family, sports, nutrition, and everyday life. Find practical advice for a better lifestyle."
     />
     <meta
       name="twitter:image"
@@ -100,7 +100,7 @@
     </script>
 
     <!-- Google Analytics -->
-    <script
+    <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-9W0Q698989"
     ></script>
@@ -111,19 +111,19 @@
       }
       gtag('js', new Date());
       gtag('config', 'G-9W0Q698989');
-    </script>
+    </script> -->
     <!-- Google Tag Manager -->
-      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      <!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
       j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-NZS7G3BL');</script>
+      })(window,document,'script','dataLayer','GTM-NZS7G3BL');</script> -->
     <!-- End Google Tag Manager -->
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
-      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NZS7G3BL"
-      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+      <!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NZS7G3BL"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -->
     <!-- End Google Tag Manager (noscript) -->
     <div id="root"></div>
     <div id="modal"></div>
