--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta property="og:url" content="https://nice-advice.info/" />
     <meta
       property="og:image"
-      content="https://vivid-triumph-4386b82e17.media.strapiapp.com/preview_fe3bc00fab.png"
+      content="https://vivid-triumph-4386b82e17.media.strapiapp.com/preview_2_bc7b8d12af.png"
     />
     <meta property="og:locale" content="en_US" />
 
@@ -47,7 +47,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://vivid-triumph-4386b82e17.media.strapiapp.com/preview_fe3bc00fab.png"
+      content="https://vivid-triumph-4386b82e17.media.strapiapp.com/preview_2_bc7b8d12af.png"
     />
     <meta name="twitter:site" content="@niceadvice" />
 
