--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
       })(window,document,'script','dataLayer','GTM-NZS7G3BL');</script> -->
     <!-- End Google Tag Manager -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+      <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
